--- a/homework.html
+++ b/homework.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/starter.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="shortcut icon" type="image/jpg" href="images/logo_icon.png" />
+    <link rel="shortcut icon" type="image/png" href="images/logo_icon.png" />
     <title>Super Slick Co.</title>
   </head>
   <body>
